airflow/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: ${namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - airflow-webserver
            topologyKey: "kubernetes.io/hostname"
      serviceAccountName: sa-airflow
      containers:
        - name: scheduler
          image: apache/airflow:latest
          command: ["airflow", "scheduler"]
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: airflow-dags
              mountPath: /opt/airflow/dags
              subPath: dags
            - name: worker-pod-template
              mountPath: /opt/airflow/worker-pod-template.yaml
              subPath: worker-pod-template.yaml
          securityContext:
            privileged: false
        - name: git-puller-sidecar
          image: alpine/git:latest
          resources: 
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 400m
          command: ["/bin/sh", "-c"]
          args:
            - while true; do git -C /git/dags pull; sleep 60; done
          volumeMounts:
            - name: airflow-dags
              mountPath: /git
          securityContext:
            runAsUser: 50000
            runAsGroup: 0
      volumes:
        - name: airflow-dags
          emptyDir: {}
        - name: worker-pod-template
          configMap:
            name: worker-pod-template
