airflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver-service
  namespace: ${namespace}
  labels:
    app: airflow-webserver
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: airflow-webserver
