airflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  namespace: ${namespace}
  labels:
    app: airflow
spec:
  rules:
    - host: airflow.${namespace}.${host}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver-service
                port:
                  number: 8080
